# Security-Mode

./: .gitattributes  README.md  Security-Mode.desktop  build.hacker  build.hl  remove.hacker  remove.hl  unpack.hacker  unpack.hl
auditing-logging/: main.cr  shard.yml
cli/: main.cr  shard.yml
core/: Cargo.toml
core/src/: main.rs
desktop/session/: Security-Mode.desktop
env/: Cargo.toml
gui/src/: main.rs
module-runner/: main.py
pentest/: main.py
source-code/cli/src/: main.cr
source-code/env/: Cargo.toml
source-code/env/src/: main.rs
source-code/gui/: Cargo.toml
source-code/pentest/: Cargo.toml
ui/src/: main.vala  window.vala
