[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team"]
description = "Core daemon for Security Mode, managing sandboxes and profiles."

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"  # For file watching
nix = "0.29"    # For system calls, namespaces, etc.
cgroups-rs = "0.3"  # For cgroups
zbus = "4.0"    # For DBus, if we implement it later
anyhow = "1.0"  # For error handling
log = "0.4"
env_logger = "0.11"
